log

Thu 14 Mar 2024 09:12:26 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
0def213
Thu 14 Mar 2024 09:13:01 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
ce4552d
Thu 14 Mar 2024 09:13:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
d97d288
Thu 14 Mar 2024 09:14:47 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: ‘i’ undeclared (first use in this function)
   14 |   for(i = 0 ; i < size ; i++)
      |       ^
exercises.c:14:7: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:10: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   16 |       if(array[i] >= max)
      |          ^~~~~
      |          arr
Compilation failed
361d5ad
Thu 14 Mar 2024 09:15:13 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: ‘i’ undeclared (first use in this function)
   14 |   for(i = 0 ; i < size ; i++)
      |       ^
exercises.c:14:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ecd36ca
Thu 14 Mar 2024 09:15:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
5f0af4e
Thu 14 Mar 2024 09:15:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2f486ff
Thu 14 Mar 2024 09:19:46 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
e53112f
Fri 15 Mar 2024 02:39:11 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:7: error: unused variable ‘Size1’ [-Werror=unused-variable]
   30 |   int Size1 = size;
      |       ^~~~~
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
9aa3bbb
Fri 15 Mar 2024 02:39:34 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
1154143
Fri 15 Mar 2024 02:39:57 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
52f094c
Fri 15 Mar 2024 02:40:25 PM UTC: 
 exercises.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  0|6
total_score: 10/70
4ea4c2a
Fri 15 Mar 2024 02:44:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 10/70
a979a55
Fri 15 Mar 2024 02:47:45 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d478e78
Fri 15 Mar 2024 02:48:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
57c9510
Fri 15 Mar 2024 02:59:02 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9e67ea
Fri 15 Mar 2024 02:59:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
4a66ee8
Sat 16 Mar 2024 12:50:22 AM UTC: 
 exercises.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
65865aa
Sat 16 Mar 2024 12:50:44 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
b788d33
Sat 16 Mar 2024 12:51:36 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
f150d1f
Sat 16 Mar 2024 12:51:50 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 20/70
2062875
Sat 16 Mar 2024 12:58:10 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
75d9ee9
Sat 16 Mar 2024 12:59:15 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7dbdf10
Sat 16 Mar 2024 01:03:42 AM UTC: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:63:5: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   63 |     print(*newSize);
      |     ^~~~~
      |     printf
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
462daf6
Sat 16 Mar 2024 01:07:32 AM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:66:16: error: expected ‘;’ before ‘:’ token
   66 |     return NULL:
      |                ^
exercises.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
   93 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c79899e
